# osprey

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  notes.md  rustfmt.toml  skaffold.yaml
.githooks/: pre-commit
_templates/plugin/help/: index.ejs
_templates/plugin/new/: main.ejs  mod.ejs.t
data/: clean.json  h.json  osprey.schema.json  updates.md  vnext.json
deploy/executor/: config.json
deploy/kubernetes/: executor.yaml  jobs.yaml
docker/: release.Dockerfile  server.Dockerfile
examples/: input.json  ret_box.rs  static.rs
osplib/: Cargo.toml
osplib/examples/: opengraph.rs  static.rs
osplib/examples/plugins/requestor/: main.rs
osplib/src/: doctest.rs  lib.rs  prelude.rs
osplib/src/agent/: api.rs  dynamic.rs  mod.rs
osplib/src/api/: job_collection.rs  jobs.rs  mod.rs  plugin.rs  plugin_types.rs
osplib/src/builtin/: mod.rs
osplib/src/builtin/data_sinks/: mod.rs
osplib/src/builtin/data_sinks/basic/: main.rs  mod.rs
osplib/src/builtin/data_sinks/mongodb/: main.rs
osplib/src/builtin/data_sinks/oxigraph/: main.rs
osplib/src/builtin/data_sinks/sweb/: main.rs
osplib/src/builtin/example/: mod.rs
osplib/src/builtin/extractors/: mod.rs
osplib/src/builtin/extractors/scraper_rs/: mod.rs  scraper.rs  scraper_test.rs
osplib/src/builtin/extractors/xpath/: example.html  mod.rs
osplib/src/builtin/matchers/regex/: mod.rs
osplib/src/executor/: api.rs  json_server.rs  mod.rs
osplib/src/executor/hja/: api.rs  executor.rs  mod.rs
osplib/src/utils/: mod.rs  read_files.rs
osprey/: Cargo.toml
osprey-remote-plugins/: Cargo.toml
osprey-remote-plugins/src/: lib.rs
osprey/src/: cli.yaml  main.rs
src/: cli.yaml  main.rs
src/lib/: api.rs  http.rs  main.rs  plugin.rs  prelude.rs
src/lib/agent/: agent.rs  api.rs  dynamic.rs  local.rs  mod.rs
src/lib/api/: job_collection.rs  mod.rs  plugin.rs  plugin_types.rs
src/lib/builtin/: mod.rs
src/lib/builtin/data_sinks/basic/: format.rs  main.rs  mod.rs
src/lib/builtin/extractors/: mod.rs
src/lib/builtin/extractors/html/: mod.rs
src/lib/builtin/extractors/scraper_rs/: mod.rs
src/lib/builtin/matchers/: mod.rs
src/lib/builtin/matchers/regex/: mod.rs
src/lib/builtin/requestor/: mod.rs  req.rs
src/lib/plugins/: mod.rs  plugin.rs  settings.rs
src/lib/remote_plugins/: README.md  mod.rs
src/lib/utils/: async_test.rs  mod.rs
src/plugins/requestor/: main.rs
src/random/: opengraph.rs
tests/: basic.json  links.json  test_executor.sh
tests/client/: job_collection.json
tests/executor/: config.json
tests/html/: README.md  clean.html  example.html  package.json  race.html  tidy
tests/others/: readme.md  scrapemate.json
tests/server/: README.md  config.json  db.json  json-server.json
