[package]
name = "osprey"
version = "0.1.0"
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "osprey"
path = "src/lib/main.rs"

[[bin]]
name = "osprey-cli"
path = "src/bin/main.rs"


[[bin]]
name = "osprey-requestor"
path = "src/plugins/requestor/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
fs_extra = "1.1.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
config = "0.10.1"
Inflector = "*"
log = "0.4.8"
env_logger = "*"
actix-web = "2"
actix-rt = "1"
http = "0.2.1"
simple-error = "0.2.1"
reqwest = "0.10.4"
async-trait = "0.1.31"
