[package]
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"
name = "osprey"
version = "0.1.0"
[[bin]]
name = "osprey-cli"
path = "src/bin/main.rs"

[[bin]]
name = "osprey-requestor"
path = "src/plugins/requestor/main.rs"

[build]
rustc-wrapper = "/home/alex/bin/sccache"

[dependencies]
Inflector = "*"
actix-rt = "1"
actix-web = "2"
anyhow = "1.0.31"
async-trait = "0.1.31"
config = "0.10.1"
env_logger = "*"
erased-serde = "*"
fs_extra = "1.1.0"
futures = "0.3.5"
futures-await-test = "0.3.0"
http = "0.2.1"
humantime-serde = "1.0.0"
log = "0.4.8"
regex = "1.3.9"
reqwest = "0.10.4"
scraper = "0.12.0"
serde_any = "0.5.0"
simple-error = "0.2.1"
textwrap = "0.12.0"
toml = "*"
typetag = "*"
url = "2.1.1"

[dependencies.clap]
features = ["yaml"]
version = "3.0.0-beta.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.110"

[dependencies.serde_json]
features = ["raw_value"]
version = "1.0.53"

[dependencies.tokio]
features = ["macros", "rt-threaded"]
version = "0.2.21"

[lib]
humantime-serde = "1.0.0"
name = "osprey"
path = "src/lib/main.rs"
scraper = "0.12.0"
serde_any = "0.5.0"
textwrap = "0.12.0"
url = "2.1.1"
