[package]
name = "osprey-remote-plugins"
version = "0.1.0"
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
config = "0.10.1"
log = "0.4.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.110"