[package]
name = "osprey"
version = "0.1.0"
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.1.0"
log = "0.4.8"
env_logger = "0.7.1"
osplib = { path = "../osplib" }

[dependencies.clap]
features = ["yaml"]
version = "3.0.0-beta.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.110"

[dependencies.serde_json]
features = ["raw_value"]
version = "1.0.53"